--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+boto3==1.33.13
+botocore==1.33.13
+jmespath==1.0.1
+python-dateutil==2.8.2
+s3transfer==0.8.2
+six==1.16.0
 slack-sdk==3.21.3
+urllib3==1.26.18
